fixed overlap fr

--- a/styles.css
+++ b/styles.css
@@ -370,7 +370,7 @@ footer{
   border-radius: 10px; 
   /*height: 270px; */
   margin: 0 auto; 
-  padding: 2rem; 
+  padding: 1rem; 
   text-align: center; 
   width: 100%;
 max-width: 500px;} 
@@ -382,7 +382,7 @@ max-width: 500px;}
   text-align:center;
   border-radius: 7px;
   background-color: #FFE5EC;
-  padding: 10px 0;
+  padding: 1rem 0;
 }
 
 .volunteer-opportunities-title h1{
